--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <script data-ionic="inject">
     (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.9.2';i.angular='5.2.10';i.staticDir='build/';})(window);
   </script>
   <meta charset="UTF-8">
-  <title>Ionic App</title>
+  <title>QUIZZ HomeSchooling</title>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
@@ -19,9 +18,6 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <!-- cordova.js required for cordova apps (remove if not needed) -->
-  <script src="cordova.js"></script>
-
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
@@ -33,16 +29,12 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
-
 <body>
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
-  <noscript>
-    <h1>Erro!</h1>
-    <p>Este navegador que você está usando, não oferece suporte para Javascript ou isto está desabilitado.</p>
-  </noscript>
+  <noscript></noscript>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
@@ -55,5 +47,4 @@
   <script src="build/main.js"></script>
 
 </body>
-
 </html>
